--- a/adventures_landing.html
+++ b/adventures_landing.html
@@ -116,7 +116,7 @@ gtag('config', 'G-9FBWPJ5ZFQ', { 'anonymize_ip': true});
    
   <ul>
   <li><a href="#tequila-tasting-in-tequila-mexico" id="toc-tequila-tasting-in-tequila-mexico" class="nav-link active" data-scroll-target="#tequila-tasting-in-tequila-mexico">Tequila Tasting in Tequila, Mexico</a></li>
-  <li><a href="#hiking-the-o-torres-del-paine-national-park-march-2023" id="toc-hiking-the-o-torres-del-paine-national-park-march-2023" class="nav-link" data-scroll-target="#hiking-the-o-torres-del-paine-national-park-march-2023">Hiking the O, Torres del Paine National Park (March 2023)</a></li>
+  <li><a href="#hiking-the-o-torres-del-paine-national-park" id="toc-hiking-the-o-torres-del-paine-national-park" class="nav-link" data-scroll-target="#hiking-the-o-torres-del-paine-national-park">Hiking the O, Torres del Paine National Park</a></li>
   </ul>
 </nav>
     </div>
@@ -144,8 +144,8 @@ gtag('config', 'G-9FBWPJ5ZFQ', { 'anonymize_ip': true});
 <section id="tequila-tasting-in-tequila-mexico" class="level3">
 <h3 class="anchored" data-anchor-id="tequila-tasting-in-tequila-mexico"><a href="./tequila.html">Tequila Tasting in Tequila, Mexico</a></h3>
 </section>
-<section id="hiking-the-o-torres-del-paine-national-park-march-2023" class="level3">
-<h3 class="anchored" data-anchor-id="hiking-the-o-torres-del-paine-national-park-march-2023">Hiking the O, Torres del Paine National Park (March 2023)</h3>
+<section id="hiking-the-o-torres-del-paine-national-park" class="level3">
+<h3 class="anchored" data-anchor-id="hiking-the-o-torres-del-paine-national-park"><a href="./torres_del_paine_hike_intro.html">Hiking the O, Torres del Paine National Park</a></h3>
 <!--### [Oktoberfest in Munich, Germany]()-->
 <!--### [Trailing of the Sheep in Ketchum, Idaho]()-->
 
