--- a/arenas_natales.html
+++ b/arenas_natales.html
@@ -7,7 +7,7 @@
 <meta name="viewport" content="width=device-width, initial-scale=1.0, user-scalable=yes">
 
 
-<title>Doctor Dry Fly - Fly Fishing in the Mountain West, and Other Adventures</title>
+<title>Doctor Dry Fly - Puntas Arenas</title>
 <style>
 code{white-space: pre-wrap;}
 span.smallcaps{font-variant: small-caps;}
@@ -111,21 +111,14 @@ gtag('config', 'G-9FBWPJ5ZFQ', { 'anonymize_ip': true});
 <!-- sidebar -->
 <!-- margin-sidebar -->
     <div id="quarto-margin-sidebar" class="sidebar margin-sidebar">
-        <nav id="TOC" role="doc-toc" class="toc-active">
-    <h2 id="toc-title">On this page</h2>
-   
-  <ul>
-  <li><a href="#fly-fishing-in-the-west" id="toc-fly-fishing-in-the-west" class="nav-link active" data-scroll-target="#fly-fishing-in-the-west">Fly Fishing in the West</a></li>
-  <li><a href="#other-adventures" id="toc-other-adventures" class="nav-link" data-scroll-target="#other-adventures">Other Adventures</a></li>
-  </ul>
-</nav>
+        
     </div>
 <!-- main -->
 <main class="content" id="quarto-document-content">
 
 <header id="title-block-header" class="quarto-title-block default">
 <div class="quarto-title">
-<h1 class="title">Fly Fishing in the Mountain West, and Other Adventures</h1>
+<h1 class="title">Puntas Arenas</h1>
 </div>
 
 
@@ -140,28 +133,19 @@ gtag('config', 'G-9FBWPJ5ZFQ', { 'anonymize_ip': true});
 
 </header>
 
-<p><img src="fishing_pics/rock_creek.JPG" class="img-fluid"> Looking down on Rock Creek, near Logan, UT.</p>
-<section id="fly-fishing-in-the-west" class="level2">
-<h2 class="anchored" data-anchor-id="fly-fishing-in-the-west"><a href="./fishing_landing.html">Fly Fishing in the West</a></h2>
-<p>Information on my completed fish slams, gear, techniques, and other waters I’ve fished.</p>
-</section>
-<section id="other-adventures" class="level2">
-<h2 class="anchored" data-anchor-id="other-adventures"><a href="./adventures_landing.html">Other Adventures</a></h2>
-<p>From time to time I do other things besides fly fishing.</p>
-<ul>
-<li><p>Tequila Tasting in Tequila, Mexico</p></li>
-<li><p>Oktoberfest in Munich, Germany</p></li>
-<li><p>Hiking the O in Patagonia</p></li>
-</ul>
-<section id="all-content-copyright-of-the-author-2023." class="level5">
-<h5 class="anchored" data-anchor-id="all-content-copyright-of-the-author-2023.">All content copyright of the author, 2023.</h5>
-</section>
-<section id="section" class="level5">
-<h5 class="anchored" data-anchor-id="section"></h5>
+<p>lost luggage</p>
+<p>mt. tarn and faros hike: mud, sawdust, wind</p>
+<p>taxis and arrival in Punta Arenas</p>
+<p>restaurants in punta arenas</p>
+<p>trail signs not accurate</p>
+<p>mosquitos</p>
+<p>The Hike</p>
+<p>Restaurant recommendations for Punta Arenas:</p>
+<p>(empty set)</p>
+<p>Restaurant recommendations for Puerto Natales:</p>
+<p>Basecamp Pizza, Jau, Last Hope Distillery (not a restaurant but has food),</p>
 
 
-</section>
-</section>
 
 </main> <!-- /main -->
 <script id="quarto-html-after-body" type="application/javascript">
