--- a/torres_del_paine_hike_intro.html
+++ b/torres_del_paine_hike_intro.html
@@ -7,7 +7,7 @@
 <meta name="viewport" content="width=device-width, initial-scale=1.0, user-scalable=yes">
 
 
-<title>Doctor Dry Fly - Fly Fishing in the Mountain West, and Other Adventures</title>
+<title>Doctor Dry Fly - Introduction to Hiking/Trekking the O, Patagonia Chile</title>
 <style>
 code{white-space: pre-wrap;}
 span.smallcaps{font-variant: small-caps;}
@@ -115,8 +115,10 @@ gtag('config', 'G-9FBWPJ5ZFQ', { 'anonymize_ip': true});
     <h2 id="toc-title">On this page</h2>
    
   <ul>
-  <li><a href="#fly-fishing-in-the-west" id="toc-fly-fishing-in-the-west" class="nav-link active" data-scroll-target="#fly-fishing-in-the-west">Fly Fishing in the West</a></li>
-  <li><a href="#other-adventures" id="toc-other-adventures" class="nav-link" data-scroll-target="#other-adventures">Other Adventures</a></li>
+  <li><a href="#the-good" id="toc-the-good" class="nav-link active" data-scroll-target="#the-good">The Good</a></li>
+  <li><a href="#the-bad" id="toc-the-bad" class="nav-link" data-scroll-target="#the-bad">The Bad</a></li>
+  <li><a href="#the-ugly" id="toc-the-ugly" class="nav-link" data-scroll-target="#the-ugly">The Ugly</a></li>
+  <li><a href="#topics" id="toc-topics" class="nav-link" data-scroll-target="#topics">Topics</a></li>
   </ul>
 </nav>
     </div>
@@ -125,7 +127,7 @@ gtag('config', 'G-9FBWPJ5ZFQ', { 'anonymize_ip': true});
 
 <header id="title-block-header" class="quarto-title-block default">
 <div class="quarto-title">
-<h1 class="title">Fly Fishing in the Mountain West, and Other Adventures</h1>
+<h1 class="title">Introduction to Hiking/Trekking the O, Patagonia Chile</h1>
 </div>
 
 
@@ -140,27 +142,35 @@ gtag('config', 'G-9FBWPJ5ZFQ', { 'anonymize_ip': true});
 
 </header>
 
-<p><img src="fishing_pics/rock_creek.JPG" class="img-fluid"> Looking down on Rock Creek, near Logan, UT.</p>
-<section id="fly-fishing-in-the-west" class="level2">
-<h2 class="anchored" data-anchor-id="fly-fishing-in-the-west"><a href="./fishing_landing.html">Fly Fishing in the West</a></h2>
-<p>Information on my completed fish slams, gear, techniques, and other waters I’ve fished.</p>
+<p>For days, weeks, and months after completing the O, I still struggled to process the hike. Every influencer website I’ve seen has a title like, “OMG, 15 reasons why you must hike the O!” This is not going to be one of those sites. The O trek has some real problems, and I’m still not sure I actually enjoyed it. Some of these were the result of bad luck (the weather), but some of the issues I encountered are systematic, and are the same issues encountered by everyone who undertakes it. I asked another hiker on the trek, who was older and more philosophical than me, whether he would recommend the hike to others. He said he’d thought about the question a lot because he had friends back in the States who were backpackers and would want to know how it was. His response was something like, “I’ll tell them what my experience was, avoid trying to frame it either way, and let them decide for themselves.” I think that’s a good answer, so here goes.</p>
+<section id="the-good" class="level3">
+<h3 class="anchored" data-anchor-id="the-good">The Good</h3>
+<p>The scenery, from what I could see, is incredible. The trail is all killer, no filler, with day after day of views. There are no long approaches through trees, no trudging for a day to get to the good stuff, no boring terrain. Every day is spectacular. I’d done a lot of research before the trip and was honestly worried I’d be underwhelmed by the views; I wasn’t. The diversity of the views is amazing too, as the hike traverses forests, deserts, alpine areas, glaciers, river valleys, and cliffs. Many of the mountain scenes don’t even look real, appearing more like computer generated special effects for a movie. At times, I thought the good stuff would be over; it never was. This is one of the world’s most famous hikes for a reason, and the views didn’t disappoint.</p>
 </section>
-<section id="other-adventures" class="level2">
-<h2 class="anchored" data-anchor-id="other-adventures"><a href="./adventures_landing.html">Other Adventures</a></h2>
-<p>From time to time I do other things besides fly fishing.</p>
+<section id="the-bad" class="level3">
+<h3 class="anchored" data-anchor-id="the-bad">The Bad</h3>
+<p>The list is long, but each of these things are arguably less important than the actual hike itself. The cost is high, the logistics are annoying, the trail itself is a complete disaster, it’s crowded, and the camping/refugio/park bureaucracy is hard to deal with.</p>
+<p>The weather deserves a special mention here as it nearly ruined our trip, but this isn’t constant across hikers like the other things I mentioned. In other words, a hiker could luck out, get great weather and see everything, or one could have rain every day, which makes the experience much worse.</p>
+<p>The biggest problem with the rain is that it obscured many of our views. We saw almost nothing of the Rio Paine River valley, the area around Dickson, or the Frances-Britanico canyon. Of our seven days on the trail, views on two of them were completely blocked by rain, two more days had mostly obscured views for much of the day, and only three days had relatively good views. It was very frustrating to spend days traveling to the park, months planning, and thousands of dollars to arrive and see only the bottom third of the mountain. This is perhaps my biggest hesitation in recommending the trip to others. Of course, one cannot plan for the weather, and this was just uncommonly bad luck, but the bad weather in Patagonia certainly weighs negatively on the scale of whether to hike the O.</p>
+</section>
+<section id="the-ugly" class="level3">
+<h3 class="anchored" data-anchor-id="the-ugly">The Ugly</h3>
+<p>The refugios and the entire system surrounding them is a complete and utter disaster. Two private companies, Vertice and Fantastico Sur (also called Las Torres), manage all the refugios in the park. The CEOs of both should be jailed for crimes against humanity. There are clearly too many people at each refugio so everything was crowded. The food was disgusting, the costs exorbitant, and the outward contempt for hikers displayed by both the companies and their staff, from start to finish, is overwhelming. The Chilean government should burn the entire refugio system down (metaphorically) and start over.</p>
+</section>
+<section id="topics" class="level3">
+<h3 class="anchored" data-anchor-id="topics">Topics</h3>
 <ul>
-<li><p>Tequila Tasting in Tequila, Mexico</p></li>
-<li><p>Oktoberfest in Munich, Germany</p></li>
-<li><p>Hiking the O in Patagonia</p></li>
+<li><p><a href="./torres_del_paine_logistics.html">Logistics of travel to and from the park</a></p></li>
+<li><p><a href="./torres_del_paine_hike_details.html">Overview of our hike, including mileage, times, and descriptions</a></p></li>
+<li><p><a href="./torres_del_paine_hike_problems.html">Problems with the O</a></p></li>
+<li><p><a href="./torres_del_paine_hike_refugios.html">The Refugio System</a></p></li>
+<li><p>Impressions of Punta Arenas and Puerto Natales</p></li>
+<li><p>Mt. Tarn Hike Near Punta Arenas</p></li>
 </ul>
-<section id="all-content-copyright-of-the-author-2023." class="level5">
-<h5 class="anchored" data-anchor-id="all-content-copyright-of-the-author-2023.">All content copyright of the author, 2023.</h5>
-</section>
-<section id="section" class="level5">
-<h5 class="anchored" data-anchor-id="section"></h5>
+<p>I’ll also offer some advice and recommendations, and clear up some misconceptions created from incomplete or inaccurate information on other forums and sites I’ve seen.</p>
+<p>I was originally scheduled to do a guided fly fishing trip near Torres del Paine after my hike. The trip was canceled due to bad weather.</p>
 
 
-</section>
 </section>
 
 </main> <!-- /main -->
