--- a/torres_del_paine_logistics.html
+++ b/torres_del_paine_logistics.html
@@ -7,7 +7,7 @@
 <meta name="viewport" content="width=device-width, initial-scale=1.0, user-scalable=yes">
 
 
-<title>Doctor Dry Fly - Fly Fishing in the Mountain West, and Other Adventures</title>
+<title>Doctor Dry Fly - Logistics of Travel to and from the Park</title>
 <style>
 code{white-space: pre-wrap;}
 span.smallcaps{font-variant: small-caps;}
@@ -111,21 +111,14 @@ gtag('config', 'G-9FBWPJ5ZFQ', { 'anonymize_ip': true});
 <!-- sidebar -->
 <!-- margin-sidebar -->
     <div id="quarto-margin-sidebar" class="sidebar margin-sidebar">
-        <nav id="TOC" role="doc-toc" class="toc-active">
-    <h2 id="toc-title">On this page</h2>
-   
-  <ul>
-  <li><a href="#fly-fishing-in-the-west" id="toc-fly-fishing-in-the-west" class="nav-link active" data-scroll-target="#fly-fishing-in-the-west">Fly Fishing in the West</a></li>
-  <li><a href="#other-adventures" id="toc-other-adventures" class="nav-link" data-scroll-target="#other-adventures">Other Adventures</a></li>
-  </ul>
-</nav>
+        
     </div>
 <!-- main -->
 <main class="content" id="quarto-document-content">
 
 <header id="title-block-header" class="quarto-title-block default">
 <div class="quarto-title">
-<h1 class="title">Fly Fishing in the Mountain West, and Other Adventures</h1>
+<h1 class="title">Logistics of Travel to and from the Park</h1>
 </div>
 
 
@@ -140,27 +133,24 @@ gtag('config', 'G-9FBWPJ5ZFQ', { 'anonymize_ip': true});
 
 </header>
 
-<p><img src="fishing_pics/rock_creek.JPG" class="img-fluid"> Looking down on Rock Creek, near Logan, UT.</p>
-<section id="fly-fishing-in-the-west" class="level2">
-<h2 class="anchored" data-anchor-id="fly-fishing-in-the-west"><a href="./fishing_landing.html">Fly Fishing in the West</a></h2>
-<p>Information on my completed fish slams, gear, techniques, and other waters I’ve fished.</p>
+<p>We flew from the U.S. to Santiago, then to Punta Arenas. There are apparently some direct flights from Santiago to Puerto Natales, which is the jumping off point to the park, but it’s far more common to fly into Punta Arenas.</p>
+<p>Upon landing in Santiago, we had to gather our backpacks and clear customs, and we were immediately sent to secondary inspection. In the baggage claim area there is a paper that must be completed, and there were no working pens when we arrived, so the lesson here is, have a pen on you (not in your baggage). I’m guessing almost everyone bringing a backpack into the country is sent to secondary. They x-rayed our bags, then asked us to open them. Based on our Google research, we weren’t entirely clear about what were allowed to bring into the country, but we had normal backpacker food: clif bars, cookies, jerky (in its original wrapping), powdered mash potatoes, mac and cheese, etc. After they asked us to open our bags, they asked whether we had any dried fruit (which we didn’t). It’s possible that’s the only thing they care about because they didn’t confiscate or examine any of our other food. I’m still not sure what is allowed and what isn’t, but this whole process through secondary inspection probably took about ten minutes.</p>
+<p>After landing in Punta Arenas, we stayed for three nights due to the timing of our flights and the start of our refugio reservations. This is absolutely too long in Punta Arenas but I highly recommend spending at least one night, and maybe two. One of our backpacks was lost by Latam, and it was one of about six pieces of luggage from our flight that was lost. It was found within a few hours, and when we returned to the airport to pick it up, the employees were unfazed went back into a room with apparently a lot of luggage, and returned with our backpack. It seemed like luggage is lost pretty regularly and Latam has a lot of flights from Santiago to Punta Arenas. My guess is that your luggage is likely to end up on a flight to Punta Arenas, just not necessarily <em>your</em> flight. For this reason, I think it’s smart to give yourself at least a one day buffer in Punta Arenas, just in case your bag doesn’t make it.</p>
+<p>The bus ride from Punta Arenas to Puerto Natales is about three hours, and the bus station in both places is in the center of town, within easy walking distance to most hotels and hostels.</p>
+<section id="logistics-to-the-park-from-puerto-natales" class="level4">
+<h4 class="anchored" data-anchor-id="logistics-to-the-park-from-puerto-natales">Logistics to the Park from Puerto Natales</h4>
+<p>From Puerto Natales, the buses takes about two hours to reach the park entrance, called Laguna Amarga, which is a cluster of official buildings outside the actual Welcome Center. Here you show your entrance ticket which you should have already purchased online, or you stand in line and buy a ticket. The system for both buying your ticket and showing your ticket is extremely stupid, and here’s how it works.</p>
+<p>The bus pulls up to the gate, a ranger boards and tells you the rules of the park (no fires, don’t litter, etc.) Then you disembark the bus and go to an office to either show your ticket or stand in line to purchase one, along with your identification. <strong>You must have your ticket and passport on you</strong>, instead of in your backpack/luggage, because your bus drives away to a parking area. If you made the mistake of leaving your ticket or passport in your backpack, you’ll have to ask permission to walk to the bus in the parking area, wait for the driver to open the luggage compartment, find your backpack, grab your ticket and passport, walk back to the building to show your ticket, then walk back to the bus and get your backpack. Of course, we had a moment of panic because one member of our party didn’t have her passport on her, but the person checking her ticket didn’t ask to see it (though she had retrieved a photo on her phone), despite the ranger who boarded the bus five minutes earlier making it clear that identification was needed. At the time we were there, tickets on the phone were acceptable.</p>
+<p>After you buy or show your ticket, you walk back to your bus, grab your stuff, then head to another park shuttle bus that will take you the approximately four miles to the Welcome Center. This shuttle bus costs 3,000 CLP. Hope you brought small denomination cash! The driver will make change, but everyone is shoving money in his face as he’s trying to rip off little slips of paper that represent your shuttle ticket. Lots of different bus companies arrive to the front gate about the same time so there may not be room on the first shuttle bus, hence the mad scramble to buy a shuttle bus ticket (and why you don’t want to have get your park ticket and passport from your luggage because you’ll end up at the back of the line). For those that miss the first shuttle bus, it will come back and take the remaining visitors, but this takes time.</p>
+<p>The shuttle bus drops off passengers at the Welcome Center, which is a short walk to Centro camping area, refugio, and Hotel Torres del Paine (I believe the shuttle makes a second stop at the hotel, but I’m not sure as I got off the bus at the Welcome Center). The Welcome Center has some seating, a little cafe, and a few souvenirs, but it’s much smaller than a typical entrance station you’d find at a U.S. national park. There are also people behind a desk who will answer questions.</p>
 </section>
-<section id="other-adventures" class="level2">
-<h2 class="anchored" data-anchor-id="other-adventures"><a href="./adventures_landing.html">Other Adventures</a></h2>
-<p>From time to time I do other things besides fly fishing.</p>
-<ul>
-<li><p>Tequila Tasting in Tequila, Mexico</p></li>
-<li><p>Oktoberfest in Munich, Germany</p></li>
-<li><p>Hiking the O in Patagonia</p></li>
-</ul>
-<section id="all-content-copyright-of-the-author-2023." class="level5">
-<h5 class="anchored" data-anchor-id="all-content-copyright-of-the-author-2023.">All content copyright of the author, 2023.</h5>
-</section>
-<section id="section" class="level5">
-<h5 class="anchored" data-anchor-id="section"></h5>
+<section id="logistics-from-the-park-to-laguna-amarga-and-puerto-natales" class="level4">
+<h4 class="anchored" data-anchor-id="logistics-from-the-park-to-laguna-amarga-and-puerto-natales">Logistics from the Park to Laguna Amarga and Puerto Natales</h4>
+<p>When you leave the park, you have to buy another shuttle bus ticket and repeat the process. The shuttles are not regular, but are timed with the buses. For example, our bus leaving Laguna Amarga back to Puerto Natales, was at 3pm, as were a number of other buses. The shuttle service began at 2pm from the front of the Welcome Center. Lots of people queued up for the bus starting at about 1:30pm, but the driver first called for people on buses leaving at 2pm. Because there weren’t many, he then filled the shuttle bus, to standing room, with everyone else. Buying tickets from him was almost more chaotic than on the ride into the park as the queue quickly disintegrated. I think people were really panicked about missing their bus back to Puerto Natales (and who could blame them after camping for days in the rain). Some people were left waiting at the Welcome Center because the shuttle bus filled up, but it made repeated trips, and the private buses back to Natales don’t leave until the shuttle bus has completed its rounds back-and-forth from the Welcome Center.</p>
+<p>This system doesn’t work nearly as efficiently as it should as hikers jockey for position, and buying the shuttle tickets is disorganized and confusing, especially with the bus driver shouting instructions in Spanish to a group of people who mostly don’t speak Spanish. You could always walk the four miles.</p>
+<p><a href="./torres_del_paine_hike_intro.html">Back to O Hike Overview</a></p>
 
 
-</section>
 </section>
 
 </main> <!-- /main -->
