--- a/index.html
+++ b/index.html
@@ -141,6 +141,7 @@ gtag('config', 'G-9FBWPJ5ZFQ', { 'anonymize_ip': true});
 </header>
 
 <p><img src="fishing_pics/rock_creek.JPG" class="img-fluid"> Looking down on Rock Creek, near Logan, UT.</p>
+<p>A site with trip beta, in longform. This is nominally a fly fishing site, but information on various other trips I’ve taken are included. Please contact me with any <a href="mailto:doctordryfly@gmail.com">questions</a>. I do my best to provide accurate information, but things change and all information should be independently verified.</p>
 <section id="fly-fishing-in-the-west" class="level2">
 <h2 class="anchored" data-anchor-id="fly-fishing-in-the-west"><a href="./fishing_landing.html">Fly Fishing in the West</a></h2>
 <p>Information on my completed fish slams, gear, techniques, and other waters I’ve fished.</p>
