--- a/torres_del_paine_hike_tarnandlighthouse.html
+++ b/torres_del_paine_hike_tarnandlighthouse.html
@@ -7,7 +7,7 @@
 <meta name="viewport" content="width=device-width, initial-scale=1.0, user-scalable=yes">
 
 
-<title>Doctor Dry Fly - Introduction to Hiking/Trekking the O, Patagonia Chile</title>
+<title>Doctor Dry Fly - Mt. Tarn and Faro (Lighthouse) San Isidro Hikes</title>
 <style>
 code{white-space: pre-wrap;}
 span.smallcaps{font-variant: small-caps;}
@@ -115,10 +115,9 @@ gtag('config', 'G-9FBWPJ5ZFQ', { 'anonymize_ip': true});
     <h2 id="toc-title">On this page</h2>
    
   <ul>
-  <li><a href="#the-good" id="toc-the-good" class="nav-link active" data-scroll-target="#the-good">The Good</a></li>
-  <li><a href="#the-bad" id="toc-the-bad" class="nav-link" data-scroll-target="#the-bad">The Bad</a></li>
-  <li><a href="#the-ugly" id="toc-the-ugly" class="nav-link" data-scroll-target="#the-ugly">The Ugly</a></li>
-  <li><a href="#topics" id="toc-topics" class="nav-link" data-scroll-target="#topics">Topics</a></li>
+  <li><a href="#logistics" id="toc-logistics" class="nav-link active" data-scroll-target="#logistics">Logistics</a></li>
+  <li><a href="#mt.-tarn-hike" id="toc-mt.-tarn-hike" class="nav-link" data-scroll-target="#mt.-tarn-hike">Mt. Tarn Hike</a></li>
+  <li><a href="#faro-san-isidro" id="toc-faro-san-isidro" class="nav-link" data-scroll-target="#faro-san-isidro">Faro San Isidro</a></li>
   </ul>
 </nav>
     </div>
@@ -127,7 +126,7 @@ gtag('config', 'G-9FBWPJ5ZFQ', { 'anonymize_ip': true});
 
 <header id="title-block-header" class="quarto-title-block default">
 <div class="quarto-title">
-<h1 class="title">Introduction to Hiking/Trekking the O, Patagonia Chile</h1>
+<h1 class="title">Mt. Tarn and Faro (Lighthouse) San Isidro Hikes</h1>
 </div>
 
 
@@ -142,34 +141,31 @@ gtag('config', 'G-9FBWPJ5ZFQ', { 'anonymize_ip': true});
 
 </header>
 
-<p>Even after completing the O, I’m still struggling to process the hike. Every influencer website I’ve seen has a title like, “OMG, 15 reasons why you must hike the O!” This is not going to be one of those posts. The O trek has some real problems, and I’m still not sure I actually enjoyed it. Some of these were the result of bad luck (the weather), but some of the issues I encountered are systematic, and are the same issues encountered by everyone who undertakes it. I asked another hiker on the trek, who was older and more philosophical than me, whether he would recommend the hike to others. He said he’d thought about the question a lot because he had friends back in the States who were backpackers and would want to know how it was. His response was something like, “I’ll tell them what my experience was, avoid trying to frame it either way, and let them decide for themselves.” I think that’s a good answer, so here goes.</p>
-<section id="the-good" class="level3">
-<h3 class="anchored" data-anchor-id="the-good">The Good</h3>
-<p>The scenery, from what I could see, is incredible. The trail is all killer, no filler, with day after day of views. There are no long approaches through trees, no trudging for a day to get to the good stuff, no boring terrain. Every day is spectacular. I’d done a lot of research before the trip and was honestly worried I’d be underwhelmed by the views; I wasn’t. The diversity of the views is amazing too, as the hike traverses forests, deserts, alpine areas, glaciers, river valleys, and cliffs. Many of the mountain scenes don’t even look real, appearing more like computer generated special effects for a movie. At times, I thought the good stuff would be over; it never was. This is one of the world’s most famous hikes for a reason, and the views didn’t disappoint.</p>
-<p>It’s a good option for people who want to ease into longer, multi-day hikes. It’s in a foreign country with a different language, which makes things a little trickier, but there are a lot of resources for completing it, and the physical aspect is not that demanding. There is plenty of support if things go wrong, there are no animals to worry about, no chance of losing the trail, and lots of people to keep one company. The scenery/difficulty tradeoff is really high, meaning that hikers really get a lot of bang for their walking miles. The refugio system also provides food and shelter, which means substantially less weight for people who don’t want to carry much.</p>
+<p>For killing a day in Punta Arenas (maybe while you wait for your bags to arrive), hiking Mt. Tarn and/or to the lighthouse is a good option. Both hikes begin from the same parking lot and can be done separately or together. While neither hike is particularly long, the combination of them together is a good warmup for the O. And, we were surprisingly tired after completing both due to the trail conditions and elevation gain up to Mt. Tarn and the sandy beachwalk to the lighthouse.</p>
+<section id="logistics" class="level3">
+<h3 class="anchored" data-anchor-id="logistics">Logistics</h3>
+<p>You’ll need a car to reach the parking lot, which is about an hour down the coast (south) from Punta Arenas. We had pre-booked a rental car from the airport, and took a taxi back to the airport to pick up the car. Though there are rental car options in town, they were sold-out by the time we booked. I suspect it is possible to hitchhike to the trailhead parking lot as there was a decent number of cars headed down there, but it might be tough to find a ride back to town. There is no public transportation as far as I know.</p>
+<p>The drive down the coast is scenic, with views of the Magellan Straight and the low inland hills. The road turns into dirt a few miles from the parking lot, but it’s in good condition and four-wheel drive was not necessary. The parking lot is obvious as the road dead-ends and there are signs indicating the end of the road and the cape. There will likely be other cars parked here as well. Park your car here and start walking down the road.</p>
+<p><img src="fishing_pics/patagonia/fin_del_camino.JPG" class="img-fluid"> The sign at the end of the road indicating that San Isidro is the most southern lighthouse in the Americas. The last sign with stickers says, “Fin de Camino.”</p>
 </section>
-<section id="the-bad" class="level3">
-<h3 class="anchored" data-anchor-id="the-bad">The Bad</h3>
-<p>The list is long, but each of these things are arguably less important than the actual hike itself. The cost is high, the logistics are annoying, the trail itself is a complete disaster, it’s crowded, and the camping/refugio/park bureaucracy is hard to deal with.</p>
-<p>The weather deserves a special mention here as it nearly ruined our trip, but this isn’t constant across hikers like the other things I mentioned. In other words, a hiker could luck out, get great weather and see everything, or one could have rain every day, which makes the experience much worse.</p>
-<p>The biggest problem with the rain is that it obscured many of our views. We saw almost nothing of the Rio Paine River valley, the area around Dickson, or the Frances-Britanico canyon. Of our seven days on the trail, views on two of them were completely blocked by rain, two more days had mostly obscured views for much of the day, and only three days had relatively good views. It was very frustrating to spend days traveling to the park, months planning, and thousands of dollars to arrive and see only the bottom third of the mountain. This is perhaps my biggest hesitation in recommending the trip to others. Of course, one cannot plan for the weather, and this was just uncommonly bad luck, but the bad weather in Patagonia certainly weighs negatively on the scale of whether to hike the O.</p>
+<section id="mt.-tarn-hike" class="level3">
+<h3 class="anchored" data-anchor-id="mt.-tarn-hike">Mt. Tarn Hike</h3>
+<p>It isn’t immediately obvious where the trail to Mt. Tarn is, but after walking a short distance down the road paralleling the ocean (maybe .25 miles), there will be a sign and trail on the right with some stairs leading away from the ocean into the forest. This is the start of the Mt. Tarn hike. Caltopo says it’s about 3.14 miles and 2,600 feet to the top, which is consistent with our experience. It sounds steep, but it really wasn’t as bad as it seems on paper.</p>
+<p>The trail climbs very steeply through the forest before emerging onto a flat-ish plateau a bit above the ocean. There are signs and poles marking the trail, but there are also a lot of side trails made from hikers avoiding mud. The mud is definitely a thing on this hike as it very bad and exists nearly the entire way up. In fact, it gets worse the higher you climb. So though it’s easy to not know if you are on the official trail, it’s easy to figure out where you should be going. The signs along the trail also tell you the distance you’ve come and where the next sign is, so I consider it almost impossible to get lost.</p>
+<p><img src="fishing_pics/patagonia/tarn_sign.JPG" class="img-fluid"> These signs exist every so often on the way up to Mt. Tarn, making it easy to follow the route.</p>
+<p>After briefly emerging on the plateau, the trail dips into a thick forest. The trail is really destroyed here, and there is some deadfall which makes the going slow. This section is short however, and the trail once again emerges from the trees. From here it continues uphill, cuts across flat bogs, goes uphill more, and cuts across a boggy/lagoon area. The mud is so, so bad. The good news is that Mt. Tarn is obviously getting much closer and one can begin to see the hike up the slopes of the mountain.</p>
+<p><img src="fishing_pics/patagonia/tarn_mud.JPG" class="img-fluid"> The mud and boggy-ness is really bad. Bring extra shoes to change into for the return drive to Arenas.</p>
+<p><img src="fishing_pics/patagonia/tarn_view.JPG" class="img-fluid"> Mt. Tarn as seen from the trail. The brown streak across the face looks like a trail but is not.</p>
+<p>The last section up the slopes of Mt. Tarn is steep, but at least it isn’t muddy (mostly). The real problem for us here was the wind. No surprise, it was blowing hard and made things just spicy enough to be interesting. There isn’t any exposure but walking uphill directly into the wind with little ice pellets pelting down was uncomfortable. I don’t know how hard the wind was blowing, maybe 40 or 50 miles per hour?</p>
+<p>We didn’t actually make it to the summit, but instead reached the shoulder of Mt. Tarn. It was simply too windy to continue, especially once we reached the ridge of the mountain. The views here are very good, and it’s cool being on a mountain that Darwin supposedly climbed when the Beagle visited the area.</p>
+<p><img src="fishing_pics/patagonia/tarn_ridge.JPG" class="img-fluid"> View looking north from the shoulder of Mt. Tarn below the summit.</p>
+<p><img src="fishing_pics/patagonia/tarn_straightviews.JPG" class="img-fluid"> View looking south toward the Straight. San Isidro lighthouse at bottom.</p>
 </section>
-<section id="the-ugly" class="level3">
-<h3 class="anchored" data-anchor-id="the-ugly">The Ugly</h3>
-<p>The refugios and the entire system surrounding them is a complete and utter disaster. Two private companies, Vertice and Fantastico Sur (also called Las Torres), manage all the refugios in the park. The CEOs of both should be jailed for crimes against humanity. There are clearly too many people at each refugio so everything was crowded. The food was disgusting, the costs exorbitant, and the outward contempt for hikers displayed by both the companies and their staff, from start to finish, is overwhelming. The Chilean government should burn the entire refugio system down (metaphorically) and start over.</p>
-</section>
-<section id="topics" class="level3">
-<h3 class="anchored" data-anchor-id="topics">Topics</h3>
-<ul>
-<li><p><a href="./torres_del_paine_logistics.html">Logistics of travel to and from the park</a></p></li>
-<li><p><a href="./torres_del_paine_hike_details.html">Overview of our hike, including mileage, times, and descriptions</a></p></li>
-<li><p><a href="./torres_del_paine_hike_problems.html">Problems with the O</a></p></li>
-<li><p><a href="./torres_del_paine_hike_refugios.html">The Refugio System</a></p></li>
-<li><p>Impressions of Punta Arenas and Puerto Natales</p></li>
-<li><p><a href="./torres_del_paine_hike_tarnandlighthouse.html">Mt. Tarn and San Isidro Lighthouse Hikes Near Punta Arenas</a></p></li>
-</ul>
-<p>I’ll also offer some advice and recommendations, and clear up some misconceptions created from incomplete or inaccurate information on other forums and sites I’ve seen.</p>
-<p>I was originally scheduled to do a guided fly fishing trip near Torres del Paine after my hike. The trip was canceled due to bad weather.</p>
+<section id="faro-san-isidro" class="level3">
+<h3 class="anchored" data-anchor-id="faro-san-isidro">Faro San Isidro</h3>
+<p>I can make this short and sweet. From Mt. Tarn, return to the road the same way. From the road, begin walking south away from the parking lot. This is almost entirely a beach walk which means walking through sand. It’s about 2.5 miles (2.87 according to Caltopo), which makes the roundtrip about 5.74. Add that to the 6.28 miles to the top of Mt. Tarn and back, and it’s a 12 mile day that is not that easy given the elevation gain, the mud, and the sand.</p>
+<p>The lighthouse is interesting. It’s not open, but you can walk around the grounds and get some good views of the Straight and the mountains to the northwest. All in all, this is a good warmup hike for the O and a good way to spend a day in the Punta Arenas area.</p>
+<p><img src="fishing_pics/patagonia/faro_san_isidro.JPG" class="img-fluid"> Approaching the lighthouse.</p>
 
 
 </section>
