--- a/fishing_landing.html
+++ b/fishing_landing.html
@@ -120,6 +120,7 @@ gtag('config', 'G-9FBWPJ5ZFQ', { 'anonymize_ip': true});
   <ul>
   <li><a href="#slams" id="toc-slams" class="nav-link active" data-scroll-target="#slams">Slams</a></li>
   <li><a href="#other-places" id="toc-other-places" class="nav-link" data-scroll-target="#other-places">Other Places</a></li>
+  <li><a href="#how-i-fish" id="toc-how-i-fish" class="nav-link" data-scroll-target="#how-i-fish">How I Fish</a></li>
   </ul>
 </nav>
     </div>
@@ -174,6 +175,9 @@ gtag('config', 'G-9FBWPJ5ZFQ', { 'anonymize_ip': true});
 <section id="other-places" class="level2">
 <h2 class="anchored" data-anchor-id="other-places">Other Places</h2>
 <p>See my <a href="./waters_directory.html">Waters Directory</a> for a state-ordered list of all the waters I’ve fished and describe on this website.</p>
+</section>
+<section id="how-i-fish" class="level2">
+<h2 class="anchored" data-anchor-id="how-i-fish"><a href="fishing.technique.qmd">How I Fish</a></h2>
 <!--#Backpacking Setup-->
 <!--#Catch a fish every month for a year-->
 <!--#slams: arizona, new mexico, nebraska, virginia, missouri, west virginia kind of-->
