--- a/fishing_landing.html
+++ b/fishing_landing.html
@@ -177,7 +177,7 @@ gtag('config', 'G-9FBWPJ5ZFQ', { 'anonymize_ip': true});
 <p>See my <a href="./waters_directory.html">Waters Directory</a> for a state-ordered list of all the waters I’ve fished and describe on this website.</p>
 </section>
 <section id="how-i-fish" class="level2">
-<h2 class="anchored" data-anchor-id="how-i-fish"><a href="fishing.technique.qmd">How I Fish</a></h2>
+<h2 class="anchored" data-anchor-id="how-i-fish"><a href="./fishing_technique.html">How I Fish</a></h2>
 <!--#Backpacking Setup-->
 <!--#Catch a fish every month for a year-->
 <!--#slams: arizona, new mexico, nebraska, virginia, missouri, west virginia kind of-->
